curiosity-part-commit

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,11 +15,12 @@ a {
 h3 {
   color: rgb(13, 19, 33);
   font-family: Azeret Mono;
-  font-size: 48px;
+  font-size: 32px;
   font-weight: 800;
-  line-height: 68px;
+  line-height: 37px;
   letter-spacing: 0%;
   text-align: center;
+  margin: 30px 0;
 }
 p {
   color: rgb(13, 19, 33);
@@ -63,4 +64,63 @@ p {
   height: 309px;
   margin: 30px auto;
 }
+.banner-part-text h1 {
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 48px;
+  font-weight: 800;
+  line-height: 68px;
+  letter-spacing: 0%;
+  text-align: center;
+}
 /* banner-part-end-css */
+/* curiosity-part started */
+.curiosity-part-content {
+  width: 946px;
+  margin: 0 auto;
+  text-align: center;
+  border-radius: 16px;
+  background: rgba(13, 19, 33, 0.02);
+  padding: 80px 97px 80px 97px;
+}
+.curiosity-explain {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  gap: 20px;
+}
+.curiosity-explain .curiosity-text {
+  text-align: left;
+  width: 55%;
+}
+.curiosity-explain .curiosity-text .curiosity-text-tittle {
+  color: rgba(13, 19, 33, 0.7);
+  font-family: Azeret Mono;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 36px;
+  margin-bottom: 10px;
+}
+.curiosity-explain .curiosity-text p {
+  text-align: left;
+}
+.curiosity-explain .curiosity-imge {
+  width: 40%;
+}
+.curiosity-explain .curiosity-imge img {
+  width: 100%;
+}
+.curiosity-btn {
+  padding: 12px 20px 12px 20px;
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 23px;
+  text-align: center;
+  margin-top: 50px;
+  box-sizing: border-box;
+  border: 1px solid rgb(13, 19, 33);
+  opacity: 0.7;
+}
