--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,13 @@
   margin: 0;
 }
 a {
-  text-decoration: none;
   display: inline-block;
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19px;
+  margin: 10px 0;
 }
 .container {
   width: 1440px;
@@ -20,7 +25,7 @@ h3 {
   line-height: 37px;
   letter-spacing: 0%;
   text-align: center;
-  margin: 30px 0;
+  margin: 50px 0;
 }
 p {
   color: rgb(13, 19, 33);
@@ -46,6 +51,11 @@ p {
   padding: 21px 24px 21px 24px;
   margin-top: 40px;
 }
+.tittle {
+  width: 852px;
+  margin: 30px 0;
+}
+
 /* banner-part-css-start */
 #banner-part-container {
   background-image: url(../assets/Hero-bg.png);
@@ -132,13 +142,8 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-sizing: border-box;
-  border: 1px solid rgba(13, 19, 33, 0.2);
 }
-.my-inspiration-tittle {
-  width: 852px;
-  margin: 30px 0;
-}
+
 .my-inspirational-vedio {
   margin-bottom: 50px;
   width: 1140px;
@@ -148,3 +153,38 @@ p {
   padding: 30px 0;
 }
 /* my- inspirational-part-end-css */
+#target-part-container {
+  width: 1140px;
+  margin: 50px auto;
+}
+
+.target-part-tittle {
+  margin: 0 auto;
+}
+.target-part-card {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.target-card-html {
+  background: rgba(255, 76, 30, 0.05);
+  padding: 20px;
+  border-radius: 16px;
+}
+.target-card-css-card {
+  background: rgba(0, 76, 232, 0.05);
+  padding: 20px;
+  border-radius: 16px;
+}
+.target-card-js-card {
+  background: rgba(255, 223, 0, 0.05);
+  padding: 20px;
+  border-radius: 16px;
+}
+.target-card h3,
+p {
+  text-align: left;
+}
