footer-part added

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,15 +5,7 @@
   padding: 0;
   margin: 0;
 }
-a {
-  display: inline-block;
-  color: rgb(13, 19, 33);
-  font-family: Azeret Mono;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 19px;
-  margin: 10px 0;
-}
+
 .container {
   width: 1440px;
 }
@@ -46,14 +38,17 @@ p {
   font-size: 20px;
   font-weight: 600;
   line-height: 23px;
-  letter-spacing: 0%;
   text-align: center;
   padding: 21px 24px 21px 24px;
   margin-top: 40px;
+  text-decoration: none;
 }
 .tittle {
   width: 852px;
   margin: 30px 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 /* banner-part-css-start */
@@ -73,6 +68,21 @@ p {
   width: 998px;
   height: 309px;
   margin: 30px auto;
+}
+.banner-part-text button {
+  margin-top: 50px;
+}
+.banner-part-text button a {
+  text-decoration: none;
+  padding: 21px 24px 21px 24px;
+  border-radius: 8px;
+  color: rgb(255, 255, 255);
+  font-family: Azeret Mono;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 23px;
+  text-align: center;
+  background: rgb(13, 19, 33);
 }
 .banner-part-text h1 {
   color: rgb(13, 19, 33);
@@ -184,7 +194,51 @@ p {
   padding: 20px;
   border-radius: 16px;
 }
-.target-card h3,
-p {
+.target-part-card h4 {
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 24px;
+  font-weight: 800;
+  line-height: 36px;
   text-align: left;
+}
+.target-part-card .card-para {
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  text-align: left;
+  margin: 30px 0;
+}
+.target-part-card span a {
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 16px;
+  font-weight: 700;
+}
+/* footer-part-started */
+#footer-container {
+  width: 1140px;
+  margin: 30px auto;
+}
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+footer h5 {
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 23px;
+  letter-spacing: 0%;
+  text-align: center;
+}
+.footer-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
