--- a/styles/style.css
+++ b/styles/style.css
@@ -46,9 +46,8 @@ p {
 .tittle {
   width: 852px;
   margin: 30px 0;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  margin: 0 auto;
+  text-align: center;
 }
 
 /* banner-part-css-start */
@@ -155,7 +154,7 @@ p {
 }
 
 .my-inspirational-vedio {
-  margin-bottom: 50px;
+  margin: 50px 0;
   width: 1140px;
   border-radius: 16px;
   border: 1px solid rgba(13, 19, 33, 0.2);
@@ -168,9 +167,6 @@ p {
   margin: 50px auto;
 }
 
-.target-part-tittle {
-  margin: 0 auto;
-}
 .target-part-card {
   display: flex;
   justify-content: space-between;
@@ -217,15 +213,91 @@ p {
   font-size: 16px;
   font-weight: 700;
 }
-/* footer-part-started */
-#footer-container {
+
+/* support-part start */
+#support-part {
   width: 1140px;
   margin: 30px auto;
 }
+.support-patrt-content {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-image: url(../assets/handshake.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 64px 48px 64px 48px;
+  border-radius: 16px;
+
+  background: rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2),
+    url(Email);
+}
+.support-patrt-content::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: rgba(13, 19, 33, 0.15);
+  border-radius: 16px;
+}
+.support-patrt-content .tittle .support-header {
+  color: aliceblue;
+  color: rgb(255, 255, 255);
+  font-family: Azeret Mono;
+  font-size: 32px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.support-patrt-content .tittle .support-para {
+  color: aliceblue;
+}
+.input-box {
+  text-align: center;
+}
+.support-box {
+  border: 1px solid rgba(13, 19, 33, 0.15);
+  border-radius: 8px;
+  padding: 19px 25px 19px 25px;
+  background: rgb(255, 255, 255);
+  margin-right: 20px;
+  color: rgba(13, 19, 33, 0.4);
+  font-family: Azeret Mono;
+  font-size: 14px;
+  font-weight: 400;
+  margin: 20px 0;
+}
+.submit-btn {
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 23px;
+  letter-spacing: 0%;
+  text-align: center;
+  padding: 17px 20px 17px 20px;
+  border: 1px solid rgba(13, 19, 33, 0.15);
+  border-radius: 8px;
+  background: rgb(255, 255, 255);
+}
+/* footer-part-started */
+#footer-container {
+  background: rgba(13, 19, 33, 0.03);
+  /* width: 1140px;
+  margin: 30px auto;
+  background: rgba(13, 19, 33, 0.03);
+  padding: 20px; */
+}
 .footer-content {
   display: flex;
+  width: 1140px;
   justify-content: space-between;
   align-items: center;
+  margin: 30px auto;
+  padding: 20px;
 }
 footer h5 {
   color: rgb(13, 19, 33);
